deploy: 6a82c540c94a2a6e997cb1d93406ab3b35e83db8

--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
     <link rel="alternate" href="/eleventy-base-blog/feed/feed.json" type="application/json" title="GMS">
 
     <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
-    <link href="/eleventy-base-blog/eleventy-base-blog/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css">
-    <link href="/eleventy-base-blog/eleventy-base-blog/assets/css/style.bundle.css" rel="stylesheet" type="text/css">
-    <link href="/eleventy-base-blog/eleventy-base-blog/assets/css/custom.css" rel="stylesheet" type="text/css">
+    <link href="/eleventy-base-blog/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css">
+    <link href="/eleventy-base-blog/assets/css/style.bundle.css" rel="stylesheet" type="text/css">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&display=swap');
+@font-face {
+  font-family: "Binance PLEX";
+  src: url("../fonts/binance-plex/binanceplex.eot");
+  src: url("../fonts/binance-plex/binanceplex.eot?#iefix")format("embedded-opentype"),
+       url("../fonts/binance-plex/binanceplex.woff2")format("woff2"),
+       url("../fonts/binance-plex/binanceplex.woff")format("woff"),
+       url("../fonts/binance-plex/binanceplex.ttf")format("truetype"),
+       url("../fonts/binance-plex/binanceplex.svg#Binance PLEX")format("svg");
+}
+
+:root, [data-bs-theme=light], [data-bs-theme=dark], body {
+  font-family: "Binance PLEX", "Google Sans", sans-serif;
+}</style>
 
     <script>
         if (window.top != window.self) {
@@ -45,8 +58,8 @@
 <div class="d-flex flex-row-fluid flex-column flex-column-fluid text-center p-10 py-lg-20">
     <!--begin::Logo-->
     <a href="/eleventy-base-blog/" class="pt-lg-20 mb-12">
-    <img alt="Logo" src="/eleventy-base-blog/eleventy-base-blog/assets/media/logos/default.svg" class="theme-light-show h-40px h-lg-50px">
-    <img alt="Logo" src="/eleventy-base-blog/eleventy-base-blog/assets/media/logos/default-dark.svg" class="theme-dark-show h-40px h-lg-50px">
+    <img alt="Logo" src="/eleventy-base-blog/assets/media/logos/default.svg" class="theme-light-show h-40px h-lg-50px">
+    <img alt="Logo" src="/eleventy-base-blog/assets/media/logos/default-dark.svg" class="theme-dark-show h-40px h-lg-50px">
     </a> 
     <!--begin::Logo-->
     <h1 class="fw-bold fs-2qx text-gray-800 mb-7">Welcome to GSM Pro</h1>
@@ -70,10 +83,10 @@
         <i class="ki-duotone ki-arrow-up"><span class="path1"></span><span class="path2"></span></i>
     </div>
     <script>
-        var hostUrl = "/eleventy-base-blog/assets/";
+        var hostUrl = "/assets/";
     </script>
-    <script src="/eleventy-base-blog/eleventy-base-blog/assets/plugins/global/plugins.bundle.js"></script>
-    <script src="/eleventy-base-blog/eleventy-base-blog/assets/js/scripts.bundle.js"></script>
+    <script src="/eleventy-base-blog/assets/plugins/global/plugins.bundle.js"></script>
+    <script src="/eleventy-base-blog/assets/js/scripts.bundle.js"></script>
 
 
     
